create productRequest and Response with proper validation